Fix layout bugs

--- a/src/components/Layout/Layout.scss
+++ b/src/components/Layout/Layout.scss
@@ -29,18 +29,23 @@
   display: grid;
   justify-items: center;
   font-family: "canada-type-gibson", "gibson", sans-serif;
+  grid-template-rows: 135px 1fr;
 
   @media screen and (min-width: 1024px) {
     grid-template-columns: 1fr 1fr;
+    grid-template-rows: initial;
+    height: var(--app-height);
   }
 
   .left {
     width: 100%;
-    height: 135px;
+    height: 100%;
     display: grid;
+    overflow: hidden;
+    position: relative;
 
     @media screen and (min-width: 1024px) {
-      height: 100%;
+      height: inherit;
     }
   }
 
@@ -58,10 +63,6 @@
 
     @media screen and (min-width: 768px) {
       padding: 4rem 3rem 3rem;
-    }
-
-    @media screen and (min-width: 1024px) {
-      height: var(--app-height);
     }
 
     .content {
